<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akronim"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="Добро пожаловать"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_20ssp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akronim"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:text="в секретный видео чат"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_20ssp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <TextView
            android:id="@+id/textSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:fontFamily="@font/akronim"
            android:includeFontPadding="false"
            android:padding="10dp"
            android:text="Войти в профиль"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LayoutHeader"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardSignIn"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@+id/textSignInLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:hint="email@email.com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_11sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/password"/>

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@null"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_11sdp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:includeFontPadding="false"
            android:text="войти"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/cardSignIn" />

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@+id/buttonSignIn"/>




        <TextView
            android:id="@+id/textNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="У вас ещё нет аккаунта?"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"/>

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:includeFontPadding="false"
            android:padding="@dimen/_6sdp"
            android:text="@string/registration_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNoAccount"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>